--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+<h3>AT THE MIDDLE</h3>
 <body>
     <div id="Centre">
      <h1>I am at the centre</h1>
     </div>
-    <h3>centre is best</h3>
+    <h6>Centre is best</h6>
 </body>
 </html>
